testing with dynamic loading enabled

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -39,6 +39,7 @@ jobs:
                   python -m pip install --upgrade .
               env:
                   USE_CUDA: 1
+                  CUDA_DYNAMIC_LOADING: 1
 
             - name: Test
               run: |
