--- a/.github/workflows/deploy-conda4.yml
+++ b/.github/workflows/deploy-conda4.yml
@@ -15,8 +15,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                # os: [ubuntu-latest, windows-latest, macos-latest]
-                os: [ubuntu-latest, macos-latest]
+                os: [ubuntu-latest, windows-latest, macos-latest]
                 
         steps:
             - name: Checkout
@@ -83,14 +82,14 @@ jobs:
             # github virtual machine. Also, we should use manylinux2014, but
             # not manylinux1. Because of this, we will not install CUDA with
             # the Jimver's action (unlike we did so for the windows wheel in
-            # the above). The ``CUDA_DYNAMIC_LOADING=1`` enables dynamic
+            # the above). The ``CUDA_DYNAMIC_LOADING=0`` disables dynamic
             # loading of CUDA library. Base of this, when the wheels are
             # created in manylinux platform, the cuda's libraries
-            # (libcudart.so, libcublas.so, libcusparse.so) will NOT bundle to
-            # the wheel. This is very good since the size of the wheel does not
-            # increase (cuda libs are large), and the  manylinux wheel can be
-            # uploaded to pypi (pypi has 100MB upload limit). On the down side,
-            # the user has to install cuda library themselves.
+            # (libcudart.so, libcublas.so, libcusparse.so) will bundle to
+            # the wheel. This is increases the wheel size, bit since the
+            # anaconda cloud upload size is 1GB, the large wheel size will not
+            # be a problem. The advantage of bundling cuda libraries to the
+            # wheel is that the end-user does not have to install cuda toolkit.
             - name: Build wheels in linux with CUDA support
               if: matrix.os == 'ubuntu-latest'
               run: python -m cibuildwheel --output-dir wheelhouse
@@ -116,8 +115,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                # os: [ubuntu-latest, windows-latest, macos-latest]
-                os: [ubuntu-latest, macos-latest]
+                os: [ubuntu-latest, windows-latest, macos-latest]
         
         # To upload to PyPI on every tag starting with 'v', use the following:
         # if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
@@ -168,8 +166,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                # os: [ubuntu-latest, windows-latest, macos-latest]
-                os: [ubuntu-latest, macos-latest]
+                os: [ubuntu-latest, windows-latest, macos-latest]
                 python-version: [3.6, 3.7, 3.8, 3.9]
 
         steps:
