--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -39,7 +39,7 @@ jobs:
 
             - name: Install package and dependencies
               run: |
-                  python -m pip install --upgrade pip
+                  python -m pip install --upgrade pip setuptools wheel
                   python -m pip install --upgrade numpy
                   python -m pip install --upgrade .[extra]
               env:
