--- a/.github/workflows/deploy-conda4.yml
+++ b/.github/workflows/deploy-conda4.yml
@@ -30,7 +30,7 @@ jobs:
 
             - name: Install numpy
               run: |
-                  python -m pip install --upgrade pip
+                  python -m pip install --upgrade pip setuptools wheel
                   python -m pip install --upgrade numpy
 
             - name: Install OpenMP and numpy for mac
@@ -139,8 +139,6 @@ jobs:
             - name: Build and upload package
               shell: bash -l {0}
               run: |
-                  ls
-                  ls dist
                   conda install -y conda-build anaconda-client
                   conda config --set anaconda_upload yes
                   export PATH=$(conda info --root):$PATH
