--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -30,7 +30,7 @@ jobs:
 
             - name: Install numpy
               run: |
-                  python -m pip install --upgrade pip
+                  python -m pip install --upgrade pip setuptools wheel
                   python -m pip install --upgrade numpy
 
             - name: Install OpenMP and numpy for mac
