--- a/.github/workflows/deploy-conda4.yml
+++ b/.github/workflows/deploy-conda4.yml
@@ -30,7 +30,7 @@ jobs:
 
             - name: Install numpy
               run: |
-                  python -m pip install --upgrade pip setuptools wheel
+                  python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
 
             - name: Install OpenMP and numpy for mac
@@ -64,7 +64,7 @@ jobs:
                   CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
                   CIBW_SKIP: "pp* cp27-* cp35-*"
                   CIBW_BUILD_VERBOSITY: 1
-                  CIBW_ENVIRONMENT: "USE_CUDA=1"
+                  CIBW_ENVIRONMENT: "USE_CUDA=1 CUDA_DYNAMIC_LOADING=0"
            
             # Do not enable compiling with CUDA for macos since NIVDIA no
             # longer supports CUDA in the macos.
