--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -38,6 +38,8 @@ include pyproject.toml
 include .coveragerc
 include tox.ini
 include environment.yml
+include .dockerignore
+include docker/Dockerfile
 
 exclude TODO.rst
 exclude .travis.yml
