--- a/.github/workflows/deploy-docker.yml
+++ b/.github/workflows/deploy-docker.yml
@@ -32,6 +32,7 @@ jobs:
               uses: docker/build-push-action@v2
               with:
                   push: true
+                  context: ./docker
                   tags: ${{ steps.meta.outputs.tags }}
                   labels: ${{ steps.meta.outputs.labels }}
 
