--- a/.github/workflows/deploy-docker.yml
+++ b/.github/workflows/deploy-docker.yml
@@ -32,7 +32,8 @@ jobs:
               uses: docker/build-push-action@v2
               with:
                   push: true
-                  context: ./docker
+                  # context: ./docker
+                  file: ./docker/Dockerfile
                   tags: ${{ steps.meta.outputs.tags }}
                   labels: ${{ steps.meta.outputs.labels }}
 
