--- a/.github/workflows/deploy-docker.yml
+++ b/.github/workflows/deploy-docker.yml
@@ -21,21 +21,13 @@ jobs:
                   username: ${{ secrets.DOCKERHUB_USERNAME }}
                   password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-            - name: Extract metadata (tags, labels) for Docker
-              id: meta
-              uses: docker/metadata-action@v3
-              with:
-                  images: sameli/imate
-
             - name: Build and push
               id: docker_build
               uses: docker/build-push-action@v2
               with:
                   push: true
-                  # context: ./docker
                   file: ./docker/Dockerfile
-                  tags: ${{ steps.meta.outputs.tags }}
-                  labels: ${{ steps.meta.outputs.labels }}
+                  tags: sameli/imate:latest
 
             - name: Image digest
               run: echo ${{ steps.docker_build.outputs.digest }}
