fixed reductions for 32-bits

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 *.ipynb linguist-vendored
-*.pyx linguist-language=Cython
-*.pxd linguist-language=Cython
-*.pxi linguist-language=Cython
+*.h linguist-language=C++
+*.pyx linguist-language=C
+*.pxd linguist-language=C
+*.pxi linguist-language=C
