remove plot dependencies

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 *.ipynb linguist-vendored
 *.h linguist-language=C++
-*.pyx linguist-language=C
-*.pxd linguist-language=C
-*.pxi linguist-language=C
+*.pyx linguist-language=Cython
+*.pxd linguist-language=Cython
+*.pxi linguist-language=Cython
