--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -48,7 +48,7 @@ jobs:
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
-                  python -m pip install --upgrade .[extra]
+                  python -m pip install --upgrade .[extra,plot]
               # env:
               #     USE_CUDA: 1
 
