added plot back to cpython. Removed from PyPy

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -36,7 +36,7 @@ jobs:
               run: |
                   python -m pip install --upgrade
                   python -m pip install --upgrade numpy
-                  python -m pip install --upgrade .[plot]
+                  python -m pip install --upgrade .
               env:
                   USE_CUDA: 1
                   CUDA_DYNAMIC_LOADING: 1
