--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -42,7 +42,7 @@ jobs:
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
-                  python -m pip install --upgrade .[extra,plot]
+                  python -m pip install --upgrade .[extra]
               env:
                   USE_CUDA: 1
                   CUDA_DYNAMIC_LOADING: 1
