--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -48,9 +48,9 @@ jobs:
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
-                  python -m pip install --upgrade .[extra,plot]
-              # env:
-              #     USE_CUDA: 1
+                  python -m pip install --upgrade .[extra]
+              env:
+                  USE_CUDA: 0
 
             - name: Test
               run: |
