--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -69,7 +69,7 @@ jobs:
               run: python -m cibuildwheel --output-dir wheelhouse
               env:
                   CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
-                  CIBW_SKIP: "cp27-* cp35-*"
+                  CIBW_SKIP: "pp* cp27-* cp35-*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_ENVIRONMENT: "USE_CUDA=1 CUDA_DYNAMIC_LOADING=1"
            
@@ -80,7 +80,7 @@ jobs:
               run: python -m cibuildwheel --output-dir wheelhouse
               env:
                   CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
-                  CIBW_SKIP: "cp27-* cp35-*"
+                  CIBW_SKIP: "pp* cp27-* cp35-*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_ENVIRONMENT: "USE_CUDA=0"
 
@@ -105,7 +105,7 @@ jobs:
                   # CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
                   # CIBW_BEFORE_ALL_LINUX: chmod +x .github/scripts/install_cuda.sh && .github/scripts/install_cuda.sh
                   CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
-                  CIBW_SKIP: "cp27-* cp35-*"
+                  CIBW_SKIP: "pp* cp27-* cp35-*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_ENVIRONMENT: "USE_CUDA=1 CUDA_DYNAMIC_LOADING=1 CUDA_HOME=/usr/local/cuda"
             
@@ -169,7 +169,8 @@ jobs:
                 # linux, we only test it on cpython, not on pypy, since many
                 # other required dependencies (like matplotlib, etc) need to be
                 # compiled on pypy.
-                python-version: ['3.6', '3.7', '3.8', '3.9', 'pypy-3.6', 'pypy-3.7']
+                # python-version: ['3.6', '3.7', '3.8', '3.9', 'pypy-3.6', 'pypy-3.7']
+                python-version: ['3.6', '3.7', '3.8', '3.9']
 
         steps:
             - name: Setup Python ${{ matrix.python-version }}
@@ -178,20 +179,20 @@ jobs:
                   python-version: ${{ matrix.python-version }}
 
             - name: Install packages
-              if: matrix.python-version != 'pypy-3.6' && matrix.python-version != 'pypy-3.7'
-              run: |
-                  python -m pip install --upgrade pip
-                  python -m pip install pytest-cov
-                  python -m pip install imate[plot]
-
-            # Do not install plot packages (matplotlib) when using pypy, since on pypy37,
-            # the kiwisolver (a dependency of matlotlib) has no wheel candicate.
-            - name: Install packages
-              if: matrix.python-version == 'pypy-3.6' || matrix.python-version == 'pypy-3.7'
+              # if: matrix.python-version != 'pypy-3.6' && matrix.python-version != 'pypy-3.7'
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install pytest-cov
                   python -m pip install imate
+
+            # Do not install plot packages (matplotlib) when using pypy, since on pypy37,
+            # the kiwisolver (a dependency of matlotlib) has no wheel candicate.
+            # - name: Install packages
+            #   if: matrix.python-version == 'pypy-3.6' || matrix.python-version == 'pypy-3.7'
+            #   run: |
+            #       python -m pip install --upgrade pip
+            #       python -m pip install pytest-cov
+            #       python -m pip install imate
 
             - name: Checkout
               uses: actions/checkout@v2
