added support for OpenBlas

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -44,6 +44,9 @@ jobs:
                   python -m pip install --upgrade numpy
                   python -m pip install --upgrade .[extra]
               env:
+                  USE_LONG_INT: 0
+                  USE_UNSIGNED_LONG_INT: 0
+                  USE_CBLAS: 0
                   USE_CUDA: 1
                   CUDA_DYNAMIC_LOADING: 1
 
