--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -34,7 +34,7 @@ jobs:
 
             - name: Install package and dependencies
               run: |
-                  python -m pip install --upgrade
+                  python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
                   python -m pip install --upgrade .
               env:
