mod docs compile

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -21,6 +21,11 @@ recursive-include docs *.in
 recursive-include docs *.txt
 recursive-exclude docs *.html
 recursive-exclude docs *.pdf
+recursive-include docs *.ico
+recursive-include docs *.ipynb
+recursive-include docs *.js
+recursive-include docs *.png
+recursive-include docs *.ttf
 recursive-include docs/source *.html
 
 recursive-include imate *.rst
