--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -48,6 +48,7 @@ include .coveragerc
 include tox.ini
 include environment.yml
 include .dockerignore
+include .tokeiignore
 include docker/Dockerfile
 
 exclude TODO.rst
