--- a/setup.cfg
+++ b/setup.cfg
@@ -13,15 +13,15 @@ addopts = --cov
 
 [check-manifest]
 ignore =
-    docs/_build
-    docs/_build/*
+    docs/build
+    docs/build/*
     notebooks/.ipynb_checkpoints
     notebooks/.ipynb_checkpoints/*
     TODO.rst
 
 [flake8]
 filename = *.py, *.pyx, *.pxd, *.pxi
-exclude = .eggs, *.egg, build, docs, .git, .tox
+exclude = .eggs, *.egg, build, docs, .git, .tox, imate_mwe.py
 max-line-length = 79
 per-file-ignores =
     *.pyx: E225, E227, E999
