--- a/tox.ini
+++ b/tox.ini
@@ -12,13 +12,12 @@ commands = python setup.py test
 [testenv:docs]
 basepython=python3
 deps =
+    pip
     cython
-    sphinx
-    sphinx-math-dollar
-    sphinx-toggleprompt
-    sphinx_rtd_theme
-    graphviz
-    sphinx-automodapi
+    -r{toxinidir}/docs/requirements.txt
+    pandoc
+setenv =
+    CYTHON_BUILD_FOR_DOC=1
 commands =
-    sphinx-apidoc -f -o docs/_modules ./imate
-    python setup.py build_sphinx
+    python setup.py install
+    make html --directory=docs
