--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -25,6 +25,7 @@ jobs:
                   BUILD_SCRIPT: |
                       apt-get update
                       apt-get install graphviz -y
+                      apt-get install pandoc -y
                       pip install --upgrade pip
                       pip install -r docs/requirements.txt
                       export CYTHON_BUILD_FOR_DOC=1
