--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -48,7 +48,7 @@ include .coveragerc
 include tox.ini
 include environment.yml
 include .dockerignore
-include .tokeiignore
+include .tokeignore
 include docker/Dockerfile
 
 exclude TODO.rst
