--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -15,7 +15,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                python-version: ['3.6', '3.7', '3.8', '3.9', 'pypy-3.6', 'pypy-3.7']
+                python-version: ['3.6', '3.7', '3.8', '3.9', '3.10', 'pypy-3.6', 'pypy-3.7']
 
         steps:
             - name: Checkout
@@ -35,7 +35,7 @@ jobs:
               uses: Jimver/cuda-toolkit@v0.2.1
               id: cuda-toolkit
               with:
-                  cuda: '11.2.2'
+                  cuda: '11.7.0'
 
             - name: Install package and dependencies (CPython)
               if: matrix.python-version != 'pypy-3.6' && matrix.python-version != 'pypy-3.7'
