--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -15,7 +15,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                python-version: ['3.6', '3.7', '3.8', '3.9']
+                python-version: ['3.6', '3.7', '3.8', '3.9', '3.10']
 
         steps:
             - name: Checkout
@@ -30,7 +30,7 @@ jobs:
               uses: Jimver/cuda-toolkit@v0.2.1
               id: cuda-toolkit
               with:
-                  cuda: '11.2.2'
+                  cuda: '11.7.0'
 
             - name: Install package and dependencies
               run: |
