--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -51,7 +51,7 @@ jobs:
               uses: Jimver/cuda-toolkit@v0.2.1
               id: cuda-toolkit
               with:
-                  cuda: '11.2.2'
+                  cuda: '11.7.0'
 
             # Build wheel for windows with CUDA enabled. Note that cibuildwheel
             # does not need manylinux docker, thuns, CUDA can be installed in
@@ -166,7 +166,7 @@ jobs:
             fail-fast: false
             matrix:
                 os: [ubuntu-latest, windows-latest, macos-latest]
-                python-version: [3.6, 3.7, 3.8, 3.9]
+                python-version: [3.6, 3.7, 3.8, 3.9, 3.10]
 
         steps:
             - name: Setup Miniconda
