--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -183,7 +183,7 @@ jobs:
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install pytest-cov
-                  python -m pip install imate
+                  python -m pip install --upgrade imate
 
             # This does not install plot packages (matplotlib, seaborn) when
             # using pypy, since on pypy37, the kiwisolver (a dependency of
