--- a/tox.ini
+++ b/tox.ini
@@ -5,19 +5,19 @@ basepython=python3
 [testenv]
 basepython=python3
 deps = 
-    cython
     pytest 
-commands = python setup.py test
+commands =
+    python setup.py test
 
 [testenv:docs]
 basepython=python3
 deps =
-    pip
-    cython
     -r{toxinidir}/docs/requirements.txt
     pandoc
 setenv =
+    PYTHONPATH = ""
     CYTHON_BUILD_FOR_DOC=1
+    CYTHON_BUILD_IN_SOURCE=1
 commands =
     python setup.py install
     make html --directory=docs
