--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -15,14 +15,14 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                python-version: ['3.6', '3.7', '3.8', '3.9', '3.10', 'pypy-3.6', 'pypy-3.7']
+                python-version: ['3.6', '3.7', '3.8', '3.9', '3.10', 'pypy3.6', 'pypy3.7', 'pypy3.8', 'pypy3.9']
 
         steps:
             - name: Checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
 
             - name: Set up Python ${{ matrix.python-version }}
-              uses: actions/setup-python@v2
+              uses: actions/setup-python@v4
               with:
                   python-version: ${{ matrix.python-version }}
 
@@ -38,7 +38,7 @@ jobs:
                   cuda: '11.7.0'
 
             - name: Install package and dependencies (CPython)
-              if: matrix.python-version != 'pypy-3.6' && matrix.python-version != 'pypy-3.7'
+              if: (! contains(matrix.python-version, 'pypy')) && (matrix.python-version != '3.10')
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
@@ -50,11 +50,25 @@ jobs:
                   USE_CUDA: 1
                   CUDA_DYNAMIC_LOADING: 1
 
+            # For python 3.10, do not install extras (sparsesuite)
+            - name: Install package and dependencies (CPython)
+              if: matrix.python-version == '3.10'
+              run: |
+                  python -m pip install --upgrade pip
+                  python -m pip install --upgrade numpy
+                  python -m pip install --upgrade .
+              env:
+                  USE_LONG_INT: 0
+                  USE_UNSIGNED_LONG_INT: 0
+                  USE_CBLAS: 0
+                  USE_CUDA: 1
+                  CUDA_DYNAMIC_LOADING: 1
+
             # This does not install plot packages (matplotlib, seaborn) when
             # using pypy, since on pypy37, the kiwisolver (a dependency of
-            # matlotlib) has no wheel candicate.
+            # matlotlib) has no wheel candidate.
             - name: Install package and dependencies (PyPy)
-              if: matrix.python-version == 'pypy-3.6' || matrix.python-version == 'pypy-3.7'
+              if: contains(matrix.python-version == 'pypy')
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
@@ -67,7 +81,7 @@ jobs:
             # only test it on cpython, not on pypy, since many other required
             # dependencies (like matplotlib, etc) need to be compiled on pypy.
             - name: Test
-              if: matrix.python-version != 'pypy-3.6' && matrix.python-version != 'pypy-3.7'
+              if: ! contains(matrix.python-version, 'pypy')
               run: |
                   python -m pip install --upgrade pytest
                   python -m pip install --upgrade pytest-cov
