--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -19,10 +19,10 @@ jobs:
 
         steps:
             - name: Checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
 
             - name: Set up Python ${{ matrix.python-version }}
-              uses: actions/setup-python@v2
+              uses: actions/setup-python@v4
               with:
                   python-version: ${{ matrix.python-version }}
 
@@ -45,10 +45,24 @@ jobs:
             #       cuda: '11.7.0'
 
             - name: Install package and dependencies
+              if: ! matrix.python-version != '3.10'
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
                   python -m pip install --upgrade .[extra]
+              env:
+                  USE_LONG_INT: 0
+                  USE_UNSIGNED_LONG_INT: 0
+                  USE_CBLAS: 0
+                  USE_CUDA: 0
+
+            # For python 3.10, do not install extras (sparsesuite)
+            - name: Install package and dependencies
+              if: matrix.python-version == '3.10'
+              run: |
+                  python -m pip install --upgrade pip
+                  python -m pip install --upgrade numpy
+                  python -m pip install --upgrade .
               env:
                   USE_LONG_INT: 0
                   USE_UNSIGNED_LONG_INT: 0
