--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -81,7 +81,7 @@ jobs:
             # only test it on cpython, not on pypy, since many other required
             # dependencies (like matplotlib, etc) need to be compiled on pypy.
             - name: Test
-              if: ! contains(matrix.python-version, 'pypy')
+              if: (!contains(matrix.python-version, 'pypy'))
               run: |
                   python -m pip install --upgrade pytest
                   python -m pip install --upgrade pytest-cov
