--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -45,7 +45,7 @@ jobs:
             #       cuda: '11.7.0'
 
             - name: Install package and dependencies
-              if: ! matrix.python-version != '3.10'
+              if: matrix.python-version != '3.10'
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
