--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -38,7 +38,7 @@ jobs:
                   cuda: '11.7.0'
 
             - name: Install package and dependencies (CPython)
-              if: (! contains(matrix.python-version, 'pypy')) && (matrix.python-version != '3.10')
+              if: (!contains(matrix.python-version, 'pypy')) && (matrix.python-version != '3.10')
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
@@ -68,7 +68,7 @@ jobs:
             # using pypy, since on pypy37, the kiwisolver (a dependency of
             # matlotlib) has no wheel candidate.
             - name: Install package and dependencies (PyPy)
-              if: contains(matrix.python-version == 'pypy')
+              if: contains(matrix.python-version, 'pypy')
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
