--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -24,9 +24,15 @@ jobs:
             - name: Setup Python 
               uses: actions/setup-python@v4
 
-            - name: Install cibuildwheel
+            - name: Install cibuildwheel (not macos)
+              if: matrix.os != 'macos-latest'
               run: |
                   python -m pip install cibuildwheel==2.9.0
+
+            - name: Install cibuildwheel (macos)
+              if: matrix.os = 'macos-latest'
+              run: |
+                  python -m pip install cibuildwheel
 
             - name: Install numpy
               run: |
