--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -30,7 +30,7 @@ jobs:
                   python -m pip install cibuildwheel==2.9.0
 
             - name: Install cibuildwheel (macos)
-              if: matrix.os = 'macos-latest'
+              if: matrix.os == 'macos-latest'
               run: |
                   python -m pip install cibuildwheel
 
