--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -15,7 +15,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                python-version: ['3.6', '3.7', '3.8', '3.9', '3.10', 'pypy3.6', 'pypy3.7']
+                python-version: ['3.6', '3.7', '3.8', '3.9', '3.10', '3.11', 'pypy3.6', 'pypy3.7']
 
         steps:
             - name: Checkout
@@ -38,7 +38,7 @@ jobs:
                   cuda: '11.7.0'
 
             - name: Install package and dependencies (CPython)
-              if: (!contains(matrix.python-version, 'pypy')) && (matrix.python-version != '3.10')
+              if: (!contains(matrix.python-version, 'pypy')) && (matrix.python-version != '3.10') && (matrix.python-version != '3.11')
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
@@ -52,7 +52,7 @@ jobs:
 
             # For python 3.10, do not install extras (sparsesuite)
             - name: Install package and dependencies (CPython)
-              if: matrix.python-version == '3.10'
+              if: (matrix.python-version == '3.10') || (matrix.python-version == '3.11')
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
