--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -23,6 +23,8 @@ jobs:
             
             - name: Setup Python 
               uses: actions/setup-python@v4
+              with:
+                python-version: '3.10'
 
             - name: Install cibuildwheel (not macos)
               if: matrix.os != 'macos-latest'
