--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -23,6 +23,8 @@ jobs:
             
             - name: Setup Python 
               uses: actions/setup-python@v4
+              with:
+                python-version: '3.10'
 
             - name: Install cibuildwheel (not macos)
               if: matrix.os != 'macos-latest'
@@ -32,7 +34,7 @@ jobs:
             - name: Install cibuildwheel (macos)
               if: matrix.os == 'macos-latest'
               run: |
-                  python -m pip install cibuildwheel
+                  python -m pip install cibuildwhee<F3>l
 
             - name: Install numpy
               run: |
@@ -130,6 +132,11 @@ jobs:
 
             - name: Install Python
               uses: actions/setup-python@v4
+
+            - name: Install numpy
+              run: |
+                  python -m pip install --upgrade pip
+                  python -m pip install --upgrade numpy
             
             - name: Build sdist
               run: python setup.py sdist
