--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -34,7 +34,7 @@ jobs:
             - name: Install cibuildwheel (macos)
               if: matrix.os == 'macos-latest'
               run: |
-                  python -m pip install cibuildwhee<F3>l
+                  python -m pip install cibuildwheel
 
             - name: Install numpy
               run: |
