--- a/.github/workflows/deploy-docs-2.yml
+++ b/.github/workflows/deploy-docs-2.yml
@@ -20,9 +20,9 @@ jobs:
 
             - name: Install and Build
               run: |
-                apt-get update
-                apt-get install graphviz -y
-                apt-get install pandoc -y
+                sudo apt-get update
+                sudo apt-get install graphviz -y
+                sudo apt-get install pandoc -y
                 pip install --upgrade pip
                 pip install -r docs/requirements.txt
                 export CYTHON_BUILD_FOR_DOC=1
