--- a/.github/workflows/deploy-docs-2.yml
+++ b/.github/workflows/deploy-docs-2.yml
@@ -8,8 +8,8 @@ on:
         branches:
             - main
 
-permissions:
-  contents: write
+# permissions:
+  # contents: write
 
 jobs:
     build-and-deploy:
