--- a/.github/workflows/deploy-docs-2.yml
+++ b/.github/workflows/deploy-docs-2.yml
@@ -42,3 +42,4 @@ jobs:
               uses: JamesIves/github-pages-deploy-action@v4
               with:
                 folder: docs/build/html
+                branch: gh-pages
