--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,13 +1,12 @@
-sphinx
-sphinx-math-dollar
-sphinx-toggleprompt
-sphinx_rtd_theme
-pydata_sphinx_theme
+sphinx==4.4.0
+sphinx-math-dollar==1.2.1
+sphinx-toggleprompt==0.2.0
+pydata_sphinx_theme==0.9.0
 graphviz
-sphinx-automodapi
-numpydoc
-nbsphinx
-sphinx_design
-sphinx-multitoc-numbering
+sphinx-automodapi==0.14.1
+numpydoc==1.4.0
+nbsphinx==0.8.9
+sphinx_design==0.2.0
+sphinx-multitoc-numbering==0.1.3
 pandoc
-sphinx-prompt
+sphinx-prompt==1.5.0
