--- a/tox.ini
+++ b/tox.ini
@@ -1,23 +1,68 @@
+[pytest]
+addopts = -ra
+testpaths = tests
+xfail_strict = true
+filterwarnings =
+    ignore::RuntimeWarning: invalid value encountered in double_scalars
+
 [tox]
-basepython=python3
-; envlist = py39
+envlist = py3, docs, pypi, check, lint, manifest
+isolated_build = True
+passenv=*
 
 [testenv]
 basepython=python3
 deps = 
-    pytest 
-commands =
-    python setup.py test
+    cython
+    numpy
+    scipy
+    pytest-cov
+changedir = {envtmpdir}
+commands = {envpython} -m pytest --disable-pytest-warnings {toxinidir}
 
 [testenv:docs]
 basepython=python3
 deps =
     -r{toxinidir}/docs/requirements.txt
     pandoc
+changedir={toxinidir}
 setenv =
     PYTHONPATH = ""
     CYTHON_BUILD_FOR_DOC=1
     CYTHON_BUILD_IN_SOURCE=1
 commands =
-    python setup.py install
+    {envpython} setup.py install
     make html --directory=docs
+
+[testenv:pypi]
+basepython = python3
+skip_install = true
+deps =
+    twine
+    pip
+changedir={toxinidir}
+commands =
+    {envpython} setup.py sdist
+    {envpython} setup.py bdist_wheel
+    twine check dist/*
+
+[testenv:check]
+basepython=python3
+deps = docutils
+skip_install = true
+changedir={toxinidir}
+commands = {envpython} setup.py check --strict --metadata
+
+[testenv:lint]
+basepython = python3
+deps = flake8
+skip_install = true
+changedir={toxinidir}
+commands = flake8
+
+[testenv:manifest]
+basepython = python3
+deps = check-manifest
+skip_install = true
+changedir={toxinidir}
+commands = check-manifest
