--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -166,7 +166,7 @@ jobs:
                   path: dist
             
             - name: Upload to PyPi
-              uses: pypa/gh-action-pypi-publish@master
+              uses: pypa/gh-action-pypi-publish@release/v1
               with:
                   verbose: true
                   user: __token__
