--- a/.github/workflows/check-manifest.yml
+++ b/.github/workflows/check-manifest.yml
@@ -22,8 +22,8 @@ jobs:
             - name: Install dependencies
               run: |
                   python -m pip install --upgrade pip
-                  pip install cython
-                  pip install check-manifest
+                  python -m pip install cython
+                  python -m pip install check-manifest
 
             - name: Check manifest
               run: |
