--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -26,6 +26,7 @@ recursive-include docs *.ipynb
 recursive-include docs *.js
 recursive-include docs *.png
 recursive-include docs *.ttf
+recursive-include docs *.md
 recursive-include docs/source *.html
 
 recursive-include imate *.rst
