--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -31,10 +31,11 @@ jobs:
                 doxygen doxyfile.in
 
             # Compile package with in-source build
+            # (use force-reinstall to downgrade packages if necessary to make them compatible)
             - name: Install
               run: |
                 python -m pip install --upgrade pip
-                python -m pip install -r requirements.txt
+                python -m pip install --force-reinstall -r requirements.txt
                 export CYTHON_BUILD_FOR_DOC=1
                 python setup.py install
 
