--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -51,6 +51,7 @@ include environment.yml
 include .dockerignore
 include .tokeignore
 include docker/Dockerfile
+include requirements_plot.txt
 
 exclude TODO.rst
 exclude .coverage
