--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -52,7 +52,7 @@ jobs:
 
             # For python 3.10 and 3.11, do not install extras (sparsesuite)
             - name: Install package and dependencies (CPython)
-              if: (matrix.python-version == '3.10') !! (matrix.python-version == '3.11')
+              if: (matrix.python-version == '3.10') || (matrix.python-version == '3.11')
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
