--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -29,7 +29,8 @@ jobs:
             - name: Install prerequisites
               run: |
                   brew install suite-sparse
-                  brew install libomp
+                  brew reinstall libomp
+                  # brew install libomp
 
                   # This is needed to import numpy in pypy3 (but not needed for
                   # pypy2 and CPython)
