--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -29,7 +29,7 @@ jobs:
             - name: Install prerequisites
               run: |
                   brew install suite-sparse
-                  brew install llvm
+                  # brew install llvm
                   ls /opt/homebrew/opt/libomp/lib
 
                   # brew reinstall libomp
