--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -31,6 +31,8 @@ jobs:
                   brew install suite-sparse
                   # brew install llvm
                   ls /opt/homebrew/opt/libomp/lib
+                  echo "---------"
+                  ls /usr/local/lib
 
                   # brew reinstall libomp
                   # brew install libomp
